@@ -58,33 +58,38 @@
   (defvar bottom-left-corner-function nil
     "The function launched when hitting the bottom-left-corner.")
 
+  (define hot-spot-timer nil)
+
   (define (hot-spot-invoke spot)
-    (let ((func (case spot
-		  ((top-left)
-		   top-left-corner-function)
-		  ((top-right)
-		   top-right-corner-function)
-		  ((bottom-right)
-		   bottom-right-corner-function)
-		  ((bottom-left)
-		   bottom-left-corner-function)
-		  ((left)
-		   left-edge-function)
-		  ((top)
-		   top-edge-function)
-		  ((right)
-		   right-edge-function)
-		  ((bottom)
-		   bottom-edge-function))))
-      (if (functionp func)
-	  (make-timer (lambda ()
-			(funcall func))
-		      (quotient hot-spot-delay 1000)
-		      (mod hot-spot-delay 1000))
-	(when func
-	  ;; non-nil, but not a function?
-	  (error "In hot-spot, your configuration of spot `%s' is wrong; it should be a function." spot))
-	)))
+    (unless hot-spot-timer
+      (let ((func (case spot
+                    ((top-left)
+                     top-left-corner-function)
+                    ((top-right)
+                     top-right-corner-function)
+                    ((bottom-right)
+                     bottom-right-corner-function)
+                    ((bottom-left)
+                     bottom-left-corner-function)
+                    ((left)
+                     left-edge-function)
+                    ((top)
+                     top-edge-function)
+                    ((right)
+                     right-edge-function)
+                    ((bottom)
+                     bottom-edge-function))))
+        (if (functionp func)
+            (setq hot-spot-timer
+                  (make-timer (lambda ()
+                                (setq hot-spot-timer nil)
+                                (funcall func))
+                              (quotient hot-spot-delay 1000)
+                              (mod hot-spot-delay 1000)))
+          (when func
+            ;; non-nil, but not a function?
+            (error "In hot-spot, your configuration of spot `%s' is wrong; it should be a function." spot))
+	))))
 
   (defvar left-edge-move-function nil
     "The function launched when hitting the left-edge.")
@@ -98,25 +103,30 @@
   (defvar bottom-edge-move-function nil
     "The function launched when hitting the bottom-edge.")
 
+  (define hot-move-timer nil)
+
   (define (hot-move-invoke spot)
-    (let ((func (case spot
-		  ((left)
-		   left-edge-move-function)
-		  ((top)
-		   top-edge-move-function)
-		  ((right)
-		   right-edge-move-function)
-		  ((bottom)
-		   bottom-edge-move-function)))
-	  (win (input-focus)))
-      (if (functionp func)
-	  (make-timer (lambda ()
-			(allow-events 'async-both)
-			(fake-release-window)
-			(funcall func win))
-		      (quotient hot-spot-delay 1000)
-		      (mod hot-spot-delay 1000))
-	(when func
-	  ;; non-nil, but not a function?
-	  (error "In hot-move, your configuration of spot `%s' is wrong; it should be a function." spot))
-	))))
+    (unless hot-move-timer
+      (let ((func (case spot
+                    ((left)
+                     left-edge-move-function)
+                    ((top)
+                     top-edge-move-function)
+                    ((right)
+                     right-edge-move-function)
+                    ((bottom)
+                     bottom-edge-move-function)))
+            (win (input-focus)))
+        (if (functionp func)
+            (setq hot-move-timer
+                  (make-timer (lambda ()
+                                (setq hot-move-timer nil)
+                                (allow-events 'async-both)
+                                (fake-release-window)
+                                (funcall func win))
+                              (quotient hot-spot-delay 1000)
+                              (mod hot-spot-delay 1000)))
+          (when func
+            ;; non-nil, but not a function?
+            (error "In hot-move, your configuration of spot `%s' is wrong; it should be a function." spot))
+          )))))
