@@ -1,3 +1,9 @@
+2011-05-28  Jeremy Hankins <nowan@nowan.org>
+	* lisp/sawfish/wm/edge/flip.jl
+	* lisp/sawfish/wm/edge/hot-spots.jl: EF/HS/HM timers are no
+	longer started if a timer is already running; fixes bug where
+	flip-viewport would jump multiple viewports.
+
 2011-05-14  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/edge/flip.jl: only call after-flip for
 	flip-workspace. set scroll-viewport-steps to 1 for flip-viewport
